# symbolfyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/symbol-tools/: SKILL.md
src/symbolfyi/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_mcp.py  test_symbolfyi.py
