[project]
name = "symbolfyi"
version = "0.2.0"
description = "Pure Python symbol encoder -- 11 encoding formats, Unicode properties, HTML entities, CLI, MCP server, and API client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "unicode",
    "symbol",
    "encoding",
    "html-entity",
    "utf8",
    "utf16",
    "character",
    "codepoint",
    "symbol-encoder",
    "unicode-properties",
    "html-entities",
    "cli",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
full = ["fonttools>=4.50"]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["symbolfyi[full,api,cli,mcp]"]

[project.scripts]
symbolfyi = "symbolfyi.cli:app"

[project.entry-points."mcp.servers"]
symbolfyi = "symbolfyi.mcp_server:mcp"

[project.urls]
Homepage = "https://symbolfyi.com"
"Symbol Encoder" = "https://symbolfyi.com/search/"
"HTML Entities" = "https://symbolfyi.com/collection/"
Documentation = "https://symbolfyi.com/developers/"
Repository = "https://github.com/fyipedia/symbolfyi"
Issues = "https://github.com/fyipedia/symbolfyi/issues"
Changelog = "https://github.com/fyipedia/symbolfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symbolfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "fonttools>=4.50",
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
